# tic-tac-toe-server

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  flake.nix  tic-tac-toe-server.cabal
.github/workflows/: haskell-ci.yml
app/: Main.hs
src/: Game.hs  Server.hs  SessionManager.hs  Types.hs  View.hs
src/Control/Monad/Logger/: Extended.hs
src/Data/Text/: Extended.hs
static/: index.html
static/css/: style.css
test/: Spec.hs
