cabal-version:       2.4

name:                tic-tac-toe-server
version:             0.1.0.0
synopsis:            Server side tic-tac-toe game
license:             MIT
license-file:        LICENSE
author:              Igor Belousov
maintainer:          lipranu@gmail.com
category:            Web
extra-source-files:  README.md

common tic-tac-toe-common
  default-language:    Haskell2010
  build-depends:       base ^>=4.17.0.0
  default-extensions:
      FlexibleContexts
    , InstanceSigs
    , NamedFieldPuns
    , RecordWildCards

common lib-test-common
  build-depends:
    , array
    , random
    , time
    , uuid

library
  import:
      tic-tac-toe-common
    , lib-test-common
  exposed-modules:
      Game
    , Server
    , SessionManager
    , Types
    , View
  other-modules:
      Control.Monad.Logger.Extended
    , Data.Text.Extended
  build-depends:
    , http-api-data
    , lucid
    , monad-logger
    , mtl
    , servant-lucid
    , servant-server
    , stm
    , text
    , unordered-containers
  hs-source-dirs:      src

executable tic-tac-toe-server
  import:              tic-tac-toe-common
  main-is:             Main.hs
  ghc-options:
    -threaded
    -Wall
    -Werror
  build-depends:
    , async
    , stm
    , tic-tac-toe-server
    , unordered-containers
    , warp
  hs-source-dirs:      app

test-suite tic-tac-toe-server-test
  import:
      tic-tac-toe-common
    , lib-test-common
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:
    , hspec
    , tic-tac-toe-server
